// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppButton component disabled 1`] = `
<div
  class="app-button"
  disabled="disabled"
  style="border-radius: 1; width: 100px; padding-top: 14px; padding-bottom: 19px; font-size: 20px;"
>
  
    test text

</div>
`;

exports[`AppButton component with border-radius 10 1`] = `
<div
  class="app-button"
  style="border-radius: 10; width: 100px; padding-top: 14px; padding-bottom: 19px; font-size: 20px;"
>
  
    test text

</div>
`;

exports[`AppButton component with default props 1`] = `
<div
  class="app-button"
  style="border-radius: 1; width: 100px; padding-top: 14px; padding-bottom: 19px; font-size: 20px;"
>
  
    test text

</div>
`;

exports[`AppButton component with fontSize 15 1`] = `
<div
  class="app-button"
  style="border-radius: 1; width: 100px; padding-top: 14px; padding-bottom: 19px; font-size: 15px;"
>
  
    test text

</div>
`;

exports[`AppButton component with height 100 1`] = `
<div
  class="app-button"
  style="border-radius: 1; width: 100px; padding-top: 14px; padding-bottom: 19px; font-size: 20px; height: 100px;"
>
  
    test text

</div>
`;

exports[`AppButton component with paddingBottom 10 1`] = `
<div
  class="app-button"
  style="border-radius: 1; width: 100px; padding-top: 14px; padding-bottom: 10px; font-size: 20px;"
>
  
    test text

</div>
`;

exports[`AppButton component with paddingTop 10 1`] = `
<div
  class="app-button"
  style="border-radius: 1; width: 100px; padding-top: 10px; padding-bottom: 19px; font-size: 20px;"
>
  
    test text

</div>
`;

exports[`AppButton component with width 100 1`] = `
<div
  class="app-button"
  style="border-radius: 1; width: 100px; padding-top: 14px; padding-bottom: 19px; font-size: 20px;"
>
  
    test text

</div>
`;
